--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongod": "^2.0.0",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "url": "^0.11.0"
   },
   "devDependencies": {},
   "scripts": {
