--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
     "mongod": "^2.0.0",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
